day1to10/cmd codes/lab4.txt
-----------------------------------------------------------------------------------------------------------------------------------------------------------

day 1
-----------------------------------------------------------------------------------------------------------------------------------------------------------

Microsoft Windows [Version 10.0.19045.2673]
(c) Microsoft Corporation. All rights reserved.

C:\Users\sajal>python
Python 3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> python
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'python' is not defined
>>> a=[1,2,3,4,5,6,7]
>>> a
[1, 2, 3, 4, 5, 6, 7]
>>> a[6]
7
>>> a[-2:-]
  File "<stdin>", line 1
    a[-2:-]
          ^
SyntaxError: invalid syntax
>>> a[-2:-6]
[]
>>> [-2:8]
  File "<stdin>", line 1
    [-2:8]
       ^
SyntaxError: invalid syntax
>>> [-2:7]
  File "<stdin>", line 1
    [-2:7]
       ^
SyntaxError: invalid syntax
>>> [-2:6]
  File "<stdin>", line 1
    [-2:6]
       ^
SyntaxError: invalid syntax
>>> a[-6:7]
[2, 3, 4, 5, 6, 7]
>>> import os
>>> cs=lamda:os.system('cls')
  File "<stdin>", line 1
    cs=lamda:os.system('cls')
            ^
SyntaxError: invalid syntax
>>> cs=lamda:os.system('cls')

-----------------------------------------------------------------------------------------------------------------------------------------------------------

day 2
-----------------------------------------------------------------------------------------------------------------------------------------------------------
Microsoft Windows [Version 10.0.19045.2673]
(c) Microsoft Corporation. All rights reserved.

C:\Users\sajal>python
Python 3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> a = [1,2,3,4]
>>> b = a
>>> a is b
True
>>> a.append 5
  File "<stdin>", line 1
    a.append 5
             ^
SyntaxError: invalid syntax
>>> a.append (5)
>>> a
[1, 2, 3, 4, 5]
>>> b
[1, 2, 3, 4, 5]
>>> a.copy
<built-in method copy of list object at 0x0000026EDEAB4780>
>>> a.copy()
[1, 2, 3, 4, 5]
>>> b=a.copy()
>>> a.append(6)
>>> a
[1, 2, 3, 4, 5, 6]
>>> v
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'v' is not defined
>>> b
[1, 2, 3, 4, 5]

-----------------------------------------------------------------------------------------------------------------------------------------------------------

shallow copy and deepcopy
-----------------------------------------------------------------------------------------------------------------------------------------------------------


Microsoft Windows [Version 10.0.19045.2673]
(c) Microsoft Corporation. All rights reserved.
C:\Users\sajal>python
Python 3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> a=[[1,3,4,5],[2,3,4],[4,4,5]]
>>> b=a.copy()
>>> a
[[1, 3, 4, 5], [2, 3, 4], [4, 4, 5]]
>>> b
[[1, 3, 4, 5], [2, 3, 4], [4, 4, 5]]
>>> b[1][1]=9
>>> b
[[1, 3, 4, 5], [2, 9, 4], [4, 4, 5]]
>>> a
[[1, 3, 4, 5], [2, 9, 4], [4, 4, 5]]
>>> c=deepcopy(a)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'deepcopy' is not defined
>>> from copy import deepcopy
>>> c=deepcopy(a)
>>> c[2][1]=7
>>> c
[[1, 3, 4, 5], [2, 9, 4], [4, 7, 5]]
>>> a
[[1, 3, 4, 5], [2, 9, 4], [4, 4, 5]]
>>>
KeyboardInterrupt
>>>